Swagger mock-up product endpoint
