# api/swagger/swagger.yaml
@@ -42,6 +42,64 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /products:
+    # our controller name
+    x-swagger-router-controller: products
+    get:
+      operationId: getAll
+      description: Get the full products list
+      # define the type of response for Success "200" and Error
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetProductsListResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /products/{categoryCode}:
+    # our controller name
+    x-swagger-router-controller: products
+    get:
+      operationId: getCategory
+      description: Get the products list for a specific product category
+      # define the type of response for Success "200" and Error
+      parameters:
+        - name: categoryCode
+          type: string
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetProductsListResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /products/item/{productId}:
+    # our controller name
+    x-swagger-router-controller: products
+    get:
+      operationId: getOne
+      description: Get a single product
+      # define the type of response for Success "200" and Error
+      parameters:
+        - name: productId
+          type: integer
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetProductResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -52,6 +110,84 @@ definitions:
     properties:
       message:
         type: string
+  GetProductsListResponse:
+    required:
+      - products
+    properties:
+      # The array of products
+      products:
+        type: array
+        items: 
+          type: object
+          properties:
+            id:
+              type: integer
+              minimum: 1
+            name:
+              type: string
+              maxLength: 100
+            description:
+              type: string
+              maxLength: 500
+            categoryCode:
+              type: string
+              minLength: 3
+              maxLength: 3
+            vendorCode:
+              type: string
+              maxLength: 50
+            sku:
+              type: string
+              maxLength: 50
+            price:
+              type: number
+              minimum: 0
+          required:
+            - id
+            - name
+            - description
+            - categoryCode
+            - vendorCode
+            - sku
+            - price
+  GetProductResponse:
+    required:
+      - product
+    properties:
+      # The array of products
+      product:
+        type: object
+        properties:
+          id:
+            type: integer
+            minimum: 1
+          name:
+            type: string
+            maxLength: 100
+          description:
+            type: string
+            maxLength: 500
+          categoryCode:
+            type: string
+            minLength: 3
+            maxLength: 3
+          vendorCode:
+            type: string
+            maxLength: 50
+          sku:
+            type: string
+            maxLength: 50
+          price:
+            type: number
+            minimum: 0
+        required:
+           - id
+           - name
+           - description
+           - categoryCode
+           - vendorCode
+           - sku
+           - price
   ErrorResponse:
     required:
       - message
